--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  display: flex; justify-content:center; align-items:center;
+}
+
+.spacer {
+  flex-grow: 1;
+  flex-basis: 10em;
+}
+
+.content {
+  flex-grow: 2;
+  flex-basis: 40em;
+}
