--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <main class="main">
     <h1>Hello {{ title }}</h1>
-    <p>Congratulations! Your app is running. 🎉</p>
+    <p>Meine lieblings spieler sind Lionel Messi und Lamine Yamal ⚽</p>
 </main>
 
 
