--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
   display: flex; justify-content:center; align-items:center;
   background-color: dimgray;
   font-family:   gill sans, sans-serif;
+  background-size: 100%;
 }
 
 
